Update style.css for form alignment fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -269,7 +269,7 @@ form button:hover {
   }
 
   .form-select {
-    width: 200px !important;
+    width: 100% !important;
   }
 }
 /* 
